--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
+    integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
+
   </head>
+
   <body>
     <div class="sidebar">
       <nav class="sidebar_navigation">
@@ -15,28 +23,64 @@
             <img src="./assets/icons/logo-spotify.png" alt="spotify logo" />
           </a>
         </div>
-        <div>
+        
           <ul>
             <li>
               <a href="">
-                <span><i class="fa-solid fa-house"></i></span>
+                <span><i class="fa fa-home"></i></span>
                 <span>Início</span>
               </a>
             </li>
             <li>
               <a href="">
-                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                <span><i class="fa fa-search"></i></span>
                 <span>Buscar</span>
               </a>
             </li>
           </ul>
-        </div>
       </nav>
+
+      <div class="library">
+        <div class="library__content">
+          <button class="library__button">
+            <span class="fa fas fa-book"></span>
+            <span>Sua biblioteca</span>
+          </button>
+          <span class="fa fa-plus"></span>
+        </div>
+
+        <section class="section-playlist">
+          <div class="section-playlist__content">
+            <span class="text title">Crie sua primeira playlist</span>
+            <span class="text subtitle">É fácil, vamos te ajudar</span>
+            <button class="section-playlist__button">
+              <span>Criar playlist</span>
+            </button>
+          </div>
+        </section>
+
+        <div class="cookies">
+          <a href="#">Cookies</a>
+        </div>
+
+        <div class="languages">
+          <button class="language__button">
+            <span class="fa fa-globe"></span>
+            <span>Português do Brasil</span>
+          </button>
+        </div>
+
+      </div>
+
     </div>
-    <script
+
+
+    <!-- <script
       src="https://kit.fontawesome.com/dffc011c62.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./script.js"></script>
+    <script src="./script.js"></script> -->
+
+
   </body>
 </html>
