--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
   <head>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href=".//src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/sidebar-footer.css" />
+    <link rel="stylesheet" href="./src/styles/main-content.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify</title>
-
+    
+    <link rel="stylesheet" href="./src/styles/vars.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
     integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
@@ -20,7 +22,7 @@
       <nav class="sidebar_navigation">
         <div class="logo">
           <a href="">
-            <img src="./assets/icons/logo-spotify.png" alt="spotify logo" />
+            <img src="./src/assets/icons/logo-spotify.png" alt="spotify logo" />
           </a>
         </div>
         
@@ -69,17 +71,33 @@
             <span>Português do Brasil</span>
           </button>
         </div>
-
       </div>
-
     </div>
 
+    <main>
+      <div class="main-container">
+        <nav class="header__navigation">
+          <div class="navigation">
+            <button class="arrow-left">
+              <img src="./src/assets/icons/small-left.png" alt="seta esquerda">
+            </button>
+            <button class="arrow-right">
+              <img src="./src/assets/icons/small-right.png" alt="seta direita">
+            </button>
+          </div>
 
-    <!-- <script
-      src="https://kit.fontawesome.com/dffc011c62.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./script.js"></script> -->
+            <div class="header__search">
+              <img src="./src/assets/icons/search.png" alt="">
+              <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?" />
+            </div>
+
+            <div class="header__login">
+              <button class="subscribe">Inscreva-se</button>
+              <button class="login">Entrar</button>
+            </div>
+        </nav>
+      </div>
+    </main>
 
 
   </body>
