added the footer, correcting sidebar spacing and alignment

--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
       </div>
     </main>
 
+    <footer class="indexfooter">
+      <div class="footercontainer">
+        <div class="footertext">
+          <span id="texttop">Testar o Premium de graça</span>
+          <span id="textbot">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</span>
+        </div>
+        <div class="footerbutton">
+          <!-- <button type="button">Inscreva-se grátis</button> -->
+          Inscreva-se grátis
+
+        </div>
+      </div>
+
+    </footer>
+
 
   </body>
 </html>
